# ChangeLog for dev-python/hglib
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/hglib/ChangeLog,v 1.6 2013/06/18 14:02:06 idella4 Exp $

*hglib-0.9 (18 Jun 2013)

  18 Jun 2013; Ian Delaney <idella4@gentoo.org> +hglib-0.9.ebuild,
  -hglib-0.1.ebuild, -hglib-0.2.ebuild, hglib-0.3.ebuild:
  update to 0.3, bump

  23 Jan 2013; Ian Delaney <idella4@gentoo.org> +files/hglib-0.3-tests.patch,
  hglib-0.3.ebuild:
  tests.patch allowing pypy to pass testsuite, pypy support added, see upstream
  pypy.org/issue1380

*hglib-0.3 (22 Jan 2013)

  22 Jan 2013; Ian Delaney <idella4@gentoo.org> +hglib-0.3.ebuild:
  bump

*hglib-0.2 (16 Mar 2012)

  16 Mar 2012; Patrick Lauer <patrick@gentoo.org> +hglib-0.2.ebuild:
  Bump for #407413

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> hglib-0.1.ebuild:
  Restricting pypy

*hglib-0.1 (04 Dec 2011)

  04 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org> +hglib-0.1.ebuild,
  +metadata.xml:
  Added dev-python/hglib-0.1, thanks to Arne Babenhauserheide. Bug #392387