@@ -4,14 +4,16 @@ Hash: SHA256
 AUX hglib-0.3-tests.patch 2565 SHA256 f218eb20ebd89e26e945683b3f9f229baa24d718e42ac789cdb651808fdc28a2 SHA512 8b2f97a186b5c644e9236d6d44af5acd908cca1183ce5c6a91cd297c119cc534ff9dbe8008c7cb18d251e0367dc4b64b06e7e87281edd55373a398c2f731a4e6 WHIRLPOOL 9808631adc74d921323d30fca69e5c87656e600dbfd38e58d89cef7480cf870f5d7c4a656054209ba6eb8a13e41dce3170aeaf736743a61fba7006fb5b69a5ac
 DIST python-hglib-0.3.tar.gz 27469 SHA256 16d821354c1d068a68b2029e3863d687d8753eaeb001fd4bcf65ceb07c0d3e6e SHA512 d67de9567256e6f1649e4f3f7dfee63371d5f00fd3fd4f92426198f862e97c57f70e827d19f4e5e1929ad85ef2ce7aa5a0596b101cafdac71672e97dc115b397 WHIRLPOOL bfce04929ab92c8f0bc6086e83147182f038e5dd0370fc0efcf28a6cdd0604f28788a9a4e227057af289adaab635f765f41fb375aabe7b06e709f9ed47aa47bf
 DIST python-hglib-0.9.tar.gz 27794 SHA256 277bfcaea4437c8a4eb8fbb215a97973bc770cea038005965fb03ba3e1531b08 SHA512 432552d9d3e5aeb3ab62a23535e4cfa4f833f92e8d0be23e688d415ef86ee9e997b401f244b9f2a5b5e860c95e746c5aad1d750ca18928707b86e5d2c3ed6e3f WHIRLPOOL 2f8a8d47b5487bf77e537e186b23c9deb494cb57c42f28b04bd3223150376cedefac1033ce338dbcd32d008bc2f0f1240b77291401d00afd7caa7dbf1aa4e422
+DIST python-hglib-1.0.tar.gz 27833 SHA256 766458699a9f2e5f351bfe73164e4f8c30290d10a097aefacd25532f315b3099 SHA512 9c0a61299779aff613131aaabbc255c8648f0fa7ab1806af53f19fbdcece0c8a68ddca7880d25b926d67ff1b9201954b207919fb09f6a290acb078e8bbed7b68 WHIRLPOOL edb5dddcbe7a1f6d94ca76d6f78a2b3a53bd56c15e55ef5810ae32f07d270fd45be8947cb8eadbca3dac2de945e97f63cddd46c90157b688032b79f48b7d29bc
 EBUILD hglib-0.3.ebuild 921 SHA256 0e6e7257de22e2fccf17b930bddb38827a4a16c8848bac768f3efcd93a850b29 SHA512 8d1e588e17d32014ffe406da9e6eb1e23b6ea5c743e069119b8aad2f8b519ed7939fe91e078ae4962e7862e9baf9069fa44e01ce79af6bd989a553fc07507b14 WHIRLPOOL 3c067a5e67a994262fec684ad56b2d05a2ff57a8bed640ad6fbca43d27ddd68cab0870c1f9baa043a4cf39d9e5ad3ec511c806a8fd5bafc605191b7f2f89565b
 EBUILD hglib-0.9.ebuild 1069 SHA256 5411a67d5ae1e93d0ab98ef0c83db230b90fabe193626c5823c43ebf6103392a SHA512 bb563e877e47654572af9b3d4638afdf9548a8263adbcc5c2ed6c9eef64e723793e19b82a8a42ad0527dbe3e923ff484be5a0621af74b05bbda3de1045675e07 WHIRLPOOL 1428f82a0a2d4196d818fb2e93bed69df16cf6538d4f28c65a5851c15454a022f02e7b9799b360e4af55fc3558aea93b9746a17fe103597e4e522eb73d8662e0
-MISC ChangeLog 1073 SHA256 e534036012b3de90416030aa40956f2a99a47a70ab4049152fd0f84e15418053 SHA512 4c7e7d62b7fee834d3f8cf45261245bc4a6f2d3aa477b0417e7aa9332ec534c35308455db580584ad01295fe9245fceeecc6c44280dfe9773b4ccea509084ff1 WHIRLPOOL 46e8f4d06bfd53734192726b29a781e6ad67752ff8b50dce5e78f8bb7cfca8f24721e9ec84c2f6a7048ca9bdee7a4894fa6193fd69ea4b8cb06733137a30a0c7
+EBUILD hglib-1.0.ebuild 1024 SHA256 d67f2d44311ca6f511b1cebef416a384cdeccb6ff0bebd2b821c4efb33fceaec SHA512 6c92d65031b564ea7fcde3ca11156d6bbe63c33f9e25551a9bb6ed30d3763c5d38613772c69c59954489b73d041a670d950057bc6c28b05028056aec0a032783 WHIRLPOOL 28793215d7e15508da0285e8dcb287964549d9952bcd20295bb90aeedb84445b0d5b38d1d22cbc11c191defa67b78fdaeb8a5fabd8f371f56a931781ac0a14f1
+MISC ChangeLog 1180 SHA256 54620c1a3353ba62df33cd31715d9509a7b975cd3ab5e6e37ec7c9fea660d379 SHA512 34dba8cddb072ba5af2e55b47da5c7a80539bad93080ffb79150528591f9aaecd278670f8d873efcf30fe0f986655b83b001fa4934189af0f57bd8627c1b8ac1 WHIRLPOOL d0f0a0f6fc56b95272807206344de477f38717baf85bd950b6c5526fa195e0595202e2899bbbcf0b31f7e8c6cd19df6f8413527693d2ed6c206cb075687b7a54
 MISC metadata.xml 441 SHA256 0c49289e400654262cc5200d6b1ec93631f5202b2b4c1095b6848e2343a2cf87 SHA512 007a59ccf348840133620250a42492c4855de23afde5e5e7a6eedb685e812ab5bf9543831fb35e12d3657497a888446bae87f6131a2de21f61e4b6897fd5c2be WHIRLPOOL f589b798ce8053d4ec6a7266952b7e5a136fccaf80ddabc10e48b5406134b14975a965cd53c80f395f49a2dacd63b1d290daea1a0b017e63e80c72fd24dbca69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlHAaGwACgkQso7CE7gHKw3RogCfSm5CG9e2GUOPnf5IEIyH9IWg
-DrwAoJxHeVzuvQODtKy2vFrt8PKJFTnl
-=NPuh
+iEYEAREIAAYFAlHGYgEACgkQso7CE7gHKw2/EACeOmyKAYmCkKiVowMqcpWmHvzF
+WNUAnRBHIlp5UpWwfmwcf95Vlu5B9kSf
+=KaEz
 -----END PGP SIGNATURE-----
