@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,python_targets_pypy1_9(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_7(-),-python_single_target_pypy1_9(-),-python_single_target_pypy2_0(-)] test? ( dev-python/nose[python_targets_python2_7(-)?,python_targets_pypy1_9(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_7(-),-python_single_target_pypy1_9(-),-python_single_target_pypy2_0(-)] ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_pypy1_9? ( dev-python/pypy:1.9 ) python_targets_pypy2_0? ( dev-python/pypy:2.0 ) dev-python/python-exec[python_targets_python2_7(-)?,python_targets_pypy1_9(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_7(-),-python_single_target_pypy1_9(-),-python_single_target_pypy2_0(-)]
+DESCRIPTION=Library for using the Mercurial Command Server from Python
+EAPI=5
+HOMEPAGE=http://mercurial.selenic.com/
+IUSE=examples test python_targets_python2_7 python_targets_pypy1_9 python_targets_pypy2_0
+KEYWORDS=~amd64 ~x86
+LICENSE=MIT
+RDEPEND=>=dev-vcs/mercurial-2.4.2 python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_pypy1_9? ( dev-python/pypy:1.9 ) python_targets_pypy2_0? ( dev-python/pypy:2.0 ) dev-python/python-exec[python_targets_python2_7(-)?,python_targets_pypy1_9(-)?,python_targets_pypy2_0(-)?,-python_single_target_python2_7(-),-python_single_target_pypy1_9(-),-python_single_target_pypy2_0(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 python_targets_pypy1_9 python_targets_pypy2_0 )
+SLOT=0
+SRC_URI=mirror://pypi/p/python-hglib/python-hglib-1.0.tar.gz
+_eclasses_=distutils-r1	6950481ecc2ad548f2d9d116a0936fb8	eutils	63afaaed8aa819fdcb814c7cd39495a2	multibuild	c2f33b0eedd7bcfd5bc226baa8da7837	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	094dc7421f9aea7525b85b899f67e62a	python-utils-r1	9aa9cecaaf78644be7c0b8b8dc814dce	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=d833e65e994e2456b40c1b9418b3c858
