@@ -27,7 +27,7 @@ DIST gdb-7.5-patches-1.tar.xz 9208 SHA256 07d2e5cd96c3acf64710d3cd1098684aa7db7e
 DIST gdb-7.5.1-patches-2.tar.xz 8720 SHA256 7b93f737eb90c981685b6eab8ab7cda7ee0a3637b0110450efa5900486cca9dc SHA512 ab04daff6c83738fb7dc96f3444d8b6ab0bc52dd380ee6079676ba9507201c4e19bf8a8dd092705c968e4109d0080216020ad4a03c963b15cd37c6da3e8804ac WHIRLPOOL 8c520dbfb3288ff19a8978f2c1e7687467e2362fa0385d1f62beb1b2081264b597b4ca45b16d0d658cfba7bd754e10f219d84bedcb8acd0c2be4d5c64b201aca
 DIST gdb-7.5.1.tar.bz2 21349391 SHA256 070b808d289fa8f0291738eeaccc0cd7700d476998781f572856155240d29d20 SHA512 23b240f0ca9376dfc2fdeb79e725a3784841d1f787db9f7ca62a5e2f824ddd8b2d5fb3450e19dd8fee79589e3b0a5fe638eaa35966363c78c82711731c26dc47 WHIRLPOOL b1bb3d5133efcdd3e842ba03bf2f8ebcd01f4cbda8333a6725cd4160604b592fb991c02c17b725ffbcea0b7e37de9ade380079d903541124b4b76fcbd5f9e754
 DIST gdb-7.5.tar.bz2 21327195 SHA256 d178c45c328369ae4f24f9a0ec53b7d009e2bfa1d41b7027280b24f58ae61932 SHA512 fcedba8a8ba50470e8c032801e99a43dae7fcaf7885b55beaf2d47bfb7b0b666cb5e3bb40d0b67e9a3ba50bd88faba0a255474ab38c2a0272e880d5c668e0506 WHIRLPOOL fa2d238380508cfe8c1ca9a0906e87d539b0470230da407c5c6a02cd9f2b63c727586a9651943ee9328bb44d782a66bb9fae7dd27e9bd31fd5cbd0161cc3514d
-DIST gdb-7.6-patches-1.tar.xz 8208 SHA256 60b0275f9ffb2dc5395b8c8f2ea030b1ab54553b5d5a656ed5e875015a80eb4f SHA512 d127fb7d9c586ea621e935482ee466649b9d2840f72da72d74950335b0d681eb0eebdc3be3e8eb615af29f9570cdafd8f20896e4e288bc818716bed8917c95d9 WHIRLPOOL c677ec3d842bda183b9750f33c00d78a53826dd828502d80acb6af3eae9e52b5e38e9ec4f393359516d9d25fe316ac6e2f2d06b827681f654813c0eb21ec32ad
+DIST gdb-7.6-patches-2.tar.xz 12912 SHA256 216684f7fac011a7bebb2dfc772801a3ac7673fc8375f1cfb83a152e6b3c8048 SHA512 e40559523100a0154289bf250f3326d6a427d49d84d50b24b33d5f6772a131f25406b6a7b80ff92f10d3aa83ab60474f4f39f511b2144a61a4a2653faaaeb18d WHIRLPOOL 4c1f6269397bed476ac6d800db44c6d6514adf78df0f0d4b8e91de18e4404b721782f3cdb01c47f67077f2347ef83a50cb6d5016aa5647b4d7c87b3b7703dcf4
 DIST gdb-7.6.tar.bz2 24333590 SHA256 a410e8f35ee70cce83dbbf1da9e2a8373f271ac0e4b71db4336ae293fc7bdf1b SHA512 3b4f7f25ab8a8014a339966fd165dac6ac63df7d6403c338bbd38737bc0033d7e6461cdea2cd6dd095335a9d2a0ecd9d694e862b8d54d269dae577402e2b3ffe WHIRLPOOL c519955a9b6246e90b979783e5745e49de36b6fcd5b17360ae8db92283efb63117a592a03b92e173a11f986dfcc587e2d5c26f3aea49634f317f554ffe2f0e72
 EBUILD gdb-6.6-r2.ebuild 1948 SHA256 e32a884423df64a81c05033f0a48ad26d9015cc3cc5834e4ea1a7f406156b4c5 SHA512 e9e701cd991d20a9a680eb93939a14ac8c34dec4ebad714d3272f1b14e63dfd90c4f516ff488ad8f6193bb3f5195edc8f097c6f420ceacb17c13b02b9de16230 WHIRLPOOL 087d7651b75c90783ba540b1a4d27bd43cb4abf642ade3bd2fd21c1c234c8d29eb2c5f93ae37ff067bd45a1cbabd4a7ce7c00090476bfc2e5e8bf6810a018ded
 EBUILD gdb-6.7.1-r3.ebuild 2040 SHA256 9b1fc62f6128421bfc572e2709e4d76cc69c7a3dae024668094d5b61622b5216 SHA512 c807d690d3ad755ecdd83a5288f8370ea9b7a9354788a9ae6584b5abf350fc194d786509e7fb10e05d2a6862d2528174c4f8999cb0677fa0e0d69028ff7aacd8 WHIRLPOOL 30123c76166799a481015b3809c6f79f9e8a0914175ec1a5f5d5456d311c7e24efe05d514f66600b363cb3e1588084c3f4cd2e4d16247081c2e1e1e5e5bb2e35
@@ -44,24 +44,24 @@ EBUILD gdb-7.4.1.ebuild 5221 SHA256 9023833ab8820e115943c39b0692e253ed805acd98b1
 EBUILD gdb-7.4.ebuild 5207 SHA256 fbcd9929e8a16b34d640fc970b788bbd10c18d00fd0a731198e92a0c69160396 SHA512 d3ea2485aa925343230c8217931c013d0aba25a52888c080aa2ba0daf7930b3c7dfe3947ab1e84aa785480586c6d8ebf52f2b4825017795d07d18cb9aff65474 WHIRLPOOL c90088d15847499d93bf5bb82b348ce73667e0e017d7898531d5672c27dd317493c9d0ae65ff62e8b1b6c4e77e10dd1d54a9a0115a63bc6ee7bb26a683ae1255
 EBUILD gdb-7.5.1.ebuild 5220 SHA256 43fb339b1b7ad96043e56f66e06a82ed74595656dbf09936c84bcc5b1addbad3 SHA512 fbffcdc0d1076c66af8ad900f626123251eb8589afb6dd39c900e4d4bc9f67ea3071c6be319b8e867f71e255d6ee14b47a372dd11163729b1970b57d2a674473 WHIRLPOOL ef920d670a0682edc354d4801340daab2441e602f42121aadf4e8f81e1c396333e9f0753abdf2ad81e0ec9156dbe70008b5905c5e414faa6bd8a1ecdc1707ef3
 EBUILD gdb-7.5.ebuild 5210 SHA256 a1c54a09ffb28e92290b51af07206e7f40c0273c90bc2beebf5339776dbd829c SHA512 50ce9fb465d102f0d66c5d7fa45c5242b2d6cac646446100c0f71f7d467d50d72a32850ab949f77d9af1182f8c9a54b3a845c4176e4fbf792fe968d22588d403 WHIRLPOOL d0f83a7b75220acd853d5f868e66edc39af76363f778abf05ae31206f84238627e9c3c028ba7ec9c069808827b1991ac3810da1cba70fabd45e0399eec160321
-EBUILD gdb-7.6.ebuild 5230 SHA256 c5946c3045d743022aaa8f45c3a50c5eb4444614698f7cad27e212a41da25a2d SHA512 4a21f045efc8662f134388b4283278db070bb344388f22d73b4749b05790fa06980dc456e61eb7b258a2e3161a3680a0726e8208ca184f7e5ed59ce9a5223207 WHIRLPOOL d683d40ff2a66f4d0d72be5c7e52dbb8a67ab8184c9d5c32bcb9c9879f493e1e93928b530d82a625d4a62ce5f36e36b22e761a3ad2d31aee0fcd80f0c026be71
+EBUILD gdb-7.6.ebuild 5230 SHA256 fb121679a827fb750af4d32d6f52e3474d91edb4abe6393720dd5265214c878a SHA512 81727039692765ed6bf9456a5cb6941759308c3b582b74c978764b16d83c8affa91102921f66696e49217dfe77b1df5c2321c681ee1e0657b1b48252ef747e42 WHIRLPOOL 5fea35696e87ce7e8043bc104aca2d070e33dcec8faef76cecc6ab08141783cc5871af05325b755ba92d1a2c20dda5627769b5b9f5a4315bbf8eb2ab5c6c4fab
 EBUILD gdb-9999.ebuild 5220 SHA256 66a692fb608a88b1c02ee91f5865a197783491c136bd7c2ee05ead4aab2920fe SHA512 7a33cce209695329437e0cec17d97f9ab1baeb471b7c90e12d7342004c079035503d238a062a07c9d9fcd3b1a680bd46b7bef0cdf62744963a99d3c4d7d4bd71 WHIRLPOOL 32e8a7261b2693675552f8a0f7961ecc25d5369b64ce03f90929862f03a9c018335adcb2d0ef373f8cbbdb5ba3db953cd433767903f812f5f63dd42270d89633
-MISC ChangeLog 31681 SHA256 a92e9069290344581dc53637dc0b753fac235e8737e289eda5c453d60e62c24e SHA512 bc4a561f04b068806e18c7b0c729dc17d49b3bf34e8a867047674e7ec3ed5659892025e9dcae513dff47a678986ca54d48c36fd45798efac850dac52e00058b1 WHIRLPOOL 4aa275ca163e0a2be4b6f9a9ab07484037a38eca1371b00d02e4f88315c2564418a71fe3b50b3429f65d43774346009f565a15ae1f192f41280fa5d351d9daef
+MISC ChangeLog 31820 SHA256 16d270d72135e4f0a442312a61be41b53eadff7a53d8c39a701cc192980a62aa SHA512 c48f90f987e53969a9b582be68fea3a4368af5e6bb7810bdaa75cf780f1d07159b58e5022af45568432a15af7d5f6f7581d02ae3dba4fe41cb97d5a1bb63fadf WHIRLPOOL 982962d191e8a6c06be9ae20c8d87f60181d56b2a387ec33db507f387426d2c006dce4711233ea7025c89ea5613cdd7e5cb192a01cc834d2e1f7d5220e41ccb8
 MISC metadata.xml 552 SHA256 e86791dadf315a7a079e460854bcc4a28d7c69a93694efc85014b325824b81cf SHA512 bb4901b011b63137fb7e359ff657fbe8aa2bd7d36a78be397c163a0bd37486a32bddf4929ab5a2a3b7b7d52f3c2edd69ce18d4bb5e2f56b45d43bb59cb54f686 WHIRLPOOL 214e51279eed4230ed8cba15e42581213428ff06c32ad7832b17c1af6c2eae351a843aae51d78a99486b5bbfea2369faa4aaa4b99cae1ce7a41da5748d8e2211
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRetkPAAoJELEHsLL7fEFWYIQP/2XcWb00MkzgqB2fq30yUmrJ
-FQDymcRmbfJJHywTwtTqE5fVFiHLL0onr9bnPmUB7wFzpZq+1BJSvwbDoYfTV+fR
-/bNLmT8jWeWp2amhVR7VREGaghyJ6ppXQHo4LWWsvYpIThhn+WsOcno80flld1hs
-eIg6alu7eSFokKhvFQg2gpJRDWT+ZBW2yef7/Heydi7Eq3AyI1UPUDgDhMBMJLB1
-uE6jI1BKuXhygVpkO9kY4/KJjcEcYcVTrpo1tAMrV0qUV2A27rJuxZmo6LF0fV3A
-ithbHtx1OXJpLVI9jt0wyWIgjD847hiZ7uK10aA6OtZASkwmYRoAVIJGabkUYPOw
-lFBXyBmDY/l/3cBsIJD5VTmzKpppdTjk7o+ggVw4pYJ1tg+tkky+7zX28cJIwI6g
-ngV4whwdVGS2magsGEnvyJdT9eL+ni61tMbFxVyzC6jZvlLYRNtfK/UbWr6AhtgN
-3J9BNOOnCbjA7cWyWLm75vec3sO9a3QxjCXg7vx7nSm4nzBIT8FvwXqujn0VxJrY
-QjDwT3rrGbmKoK3jfcl6j6xG2+/Y8vWLqR+ocSlzPHwMw8YlDfOyKUq0t/F9GmGi
-dQNcDR6CCOh2Gfq6ZeFcqH2TYPVCldRzqSQ3rfYYUE3RPf25MZEKUn6opfsBVpbT
-jcZAz++qLsLZMlxHfmbb
-=LXCj
+iQIcBAEBCAAGBQJRxlqBAAoJELEHsLL7fEFWEuMP/3gXyjoohXsCa2F/4lFqxNnY
+ISUiY+RP/eOrhTgjx3+tMJZkeHtwSM+pAjnsmEn08AeuROVbFDPIdSxr7HOzhRv8
+mFs5B0zHzMcuHoogbjFXxDeZmuNOssIo4v+eIy7OlEoDgkkp2F0+Dr6fTzI81BQE
+gYk4piU32h9a2/A8cD8I/7bdKJRVBW+ce0356qhMlMq+599FBj/WQcKTb9h42fzW
+uo1TgYwdh8yptjtESPQ/XOWk5+SqaGX2N6N4tXF6h3ZnXZ3vDsVEuy0yoTLjSCyZ
+n4bbgvjyb1FEtdji0Tv7Lg6E7gYF1Q0Ibjq+A913+/eQ+tbJQVP7x26/C6i2czHV
+XAv1h9XjJUHXA4ENBjq8idQFmPBQkQAMCcuLe+gYXjpjJtSMpcqpM6R+nvgifXs7
+dv3f2qOFyn8KxOq/4JbKkDoHgNuzeoVooskVb4F+yngPTuW2/Mp30QOqYigmrh3Y
+5AY5uUYCplIbYRixWinzoEiyVfhKsUu7/12EYmfM2SCzezc7LMmRNZIQ+2gN/AzV
+9Nly+ounQHc7D0aOFln0lpCljMCLuSTiA5907zdKM0e6I0pkmc+VR7iAqVtvyis3
+kmEETsw7cZpXNLyu+jCoiHZNo7evLFFnvN0NO6lu56SP7ia+QzL+ML7G/KGKzq9X
+8sWi3jCOsDkuHRiJU3iw
+=frRT
 -----END PGP SIGNATURE-----
